--- a/XinjingdailyBot.Setup/XinjingdailyBot.Setup.csproj
+++ b/XinjingdailyBot.Setup/XinjingdailyBot.Setup.csproj
@@ -8,6 +8,7 @@
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 		<PackageReference Include="NLog.Extensions.Logging" />
 		<PackageReference Include="Quartz.AspNetCore" />
+		<PackageReference Include="Spectre.Console" />
 		<PackageReference Include="Swashbuckle.AspNetCore" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
