--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -88,6 +88,7 @@
 		<!-- 除非调试需要，把 .NET Core 程序集的 Debug 输出都屏蔽 Trace -> Debug-> Info ->Warn-> Error-> Critical-->
 		<!-- 屏蔽日志 -->
 		<logger name="Microsoft.Extensions.Http.*" writeTo="blackhole" maxlevel="Warn" final="true" />
+		<logger name="Microsoft.AspNetCore.*" writeTo="blackhole" maxlevel="Warn" final="true" />
 		<logger name="Quartz.*" writeTo="blackhole" maxlevel="Warn" final="true" />
 		<logger name="System.*" writeTo="blackhole" maxlevel="Warn" final="true" />
 
