--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,6 +15,7 @@
     <PackageVersion Include="NLog" Version="5.3.3" />
     <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.12" />
     <PackageVersion Include="NLog.Web.AspNetCore" Version="5.3.5" />
+    <PackageVersion Include="NRedisStack" Version="0.12.0" />
     <PackageVersion Include="Quartz" Version="3.13.0" />
     <PackageVersion Include="Quartz.AspNetCore" Version="3.13.0" />
     <PackageVersion Include="SkiaSharp" Version="2.88.8" />
@@ -25,6 +26,7 @@
     <PackageVersion Include="Spectre.Console" Version="0.49.1" />
     <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
     <PackageVersion Include="SqlSugarCore" Version="5.1.4.167" />
+    <PackageVersion Include="StackExchange.Redis" Version="2.8.14" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.7.3" />
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.3" />
     <PackageVersion Include="System.Text.Json" Version="8.0.1" />
