--- a/XinjingdailyBot.Controllers/XinjingdailyBot.Controllers.csproj
+++ b/XinjingdailyBot.Controllers/XinjingdailyBot.Controllers.csproj
@@ -29,6 +29,7 @@
 		<ProjectReference Include="..\XinjingdailyBot.Interface\XinjingdailyBot.Interface.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Model\XinjingdailyBot.Model.csproj" />
 		<ProjectReference Include="..\XinjingdailyBot.Repository\XinjingdailyBot.Repository.csproj" />
+		<ProjectReference Include="..\XinjingdailyBot.Service\XinjingdailyBot.Service.csproj" />
 	</ItemGroup>
 
 </Project>
