--- a/XinjingdailyBot.Setup/XinjingdailyBot.Setup.csproj
+++ b/XinjingdailyBot.Setup/XinjingdailyBot.Setup.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
+		<PackageReference Include="System.Private.Uri" />
 	</ItemGroup>
 
 	<ItemGroup>
