--- a/XinjingdailyBot.Data/XinjingdailyBot.Data.csproj
+++ b/XinjingdailyBot.Data/XinjingdailyBot.Data.csproj
@@ -7,6 +7,7 @@
 	<ItemGroup>
 		<PackageReference Include="SqlSugarCore" />
 		<PackageReference Include="ConfigureAwaitChecker.Analyzer" PrivateAssets="all" />
+		<PackageReference Include="System.Private.Uri" />
 	</ItemGroup>
 
 	<ItemGroup>
